# fz

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md
cmake/: fzConfig.cmake.in
include/fz/: allocator.hpp  array.hpp  io.hpp  memory.hpp
include/fz/parallel/: performance.hpp
include/fz/util/: time.hpp
test/: CMakeLists.txt  test_fz_allcator.cpp  test_fz_array_basic.cpp
